structmeta-tests/tests/compile_fail/struct_meta/vec_not_parse.stderr
error[E0277]: the trait bound `NotParse: syn::parse::Parse` is not satisfied
 --> tests/compile_fail/struct_meta/vec_not_parse.rs:3:5
  |
3 |     x: Vec<NotParse>,
  |     ^ unsatisfied trait bound
  |
help: the trait `syn::parse::Parse` is not implemented for `NotParse`
 --> tests/compile_fail/struct_meta/vec_not_parse.rs:5:1
  |
5 | struct NotParse;
  | ^^^^^^^^^^^^^^^
  = help: the following other types implement trait `syn::parse::Parse`:
            Box<T>
            Example
            Option<T>
            Option<syn::expr::Label>
            Option<syn::generics::BoundLifetimes>
            Option<syn::generics::WhereClause>
            Option<syn::ty::Abi>
            proc_macro2::Group
          and $N others
note: required by a bound in `syn::punctuated::Punctuated::<T, P>::parse_terminated`
 --> $CARGO/syn-$VERSION/src/punctuated.rs
  |
  |     pub fn parse_terminated(input: ParseStream) -> Result<Self>
  |            ---------------- required by a bound in this associated function
  |     where
  |         T: Parse,
  |            ^^^^^ required by this bound in `Punctuated::<T, P>::parse_terminated`
